Bug 47963 - UI: Extension list shrinks and finally disappears on resizing window
Summary: UI: Extension list shrinks and finally disappears on resizing window
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
3.5.1 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: David Tardon
URL:
Whiteboard: target:3.6.0 target:3.5.3
Keywords:
: 47684 47775 48924 49081 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-03-27 13:45 UTC by Andras Timar
Modified: 2012-04-24 15:59 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andras Timar 2012-03-27 13:45:57 UTC
1. Tools -> Extension manager...
2. Try to resize the Extension Manager window, pull right edge of the window to the right. The list control starts to shrink. 
3. Oh well, then pull right edge of the window to the left. The list control continues to shrink! Finally it disappears.
Comment 1 David Tardon 2012-04-02 03:45:49 UTC
indeed
Comment 2 David Tardon 2012-04-02 03:47:42 UTC
egh, I wanted "RESOLVED"
Comment 3 Not Assigned 2012-04-02 03:54:21 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c4c6b52a214b474353013f9b1b03d56a5d9a0380

fdo#47963 do not increase height of checkboxes
Comment 4 Not Assigned 2012-04-02 06:59:14 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=330726cc715df115420b04b974f263a23651e75f&g=libreoffice-3-5

fdo#47963 do not increase height of checkboxes


It will be available in LibreOffice 3.5.3.
Comment 5 Harald Koester 2012-04-11 02:58:33 UTC
*** Bug 47684 has been marked as a duplicate of this bug. ***
Comment 6 Harald Koester 2012-04-11 02:59:32 UTC
*** Bug 47775 has been marked as a duplicate of this bug. ***
Comment 7 manj_k 2012-04-19 11:53:02 UTC
*** Bug 48924 has been marked as a duplicate of this bug. ***
Comment 8 Andras Timar 2012-04-23 09:45:06 UTC
*** Bug 49081 has been marked as a duplicate of this bug. ***
Comment 9 Michal Plichta 2012-04-24 15:59:09 UTC
Same for Linux (amd64) 3.5.2.2 (build 202) - check on gentoo