fdo#47963 do not increase height of checkboxes

Especially as it is obvious the grow is unbounded .-)

Signed-off-by: Andras Timar <atimar@suse.com>